update spelling convention, fix broken links, generate UPC & WPC posts, fix spotify

--- a/data/en/banner.yml
+++ b/data/en/banner.yml
@@ -5,11 +5,11 @@ banner:
   bg_image : "images/backgrounds/powerlineclouds.jpg"
   icon : "" # themify icon pack : https://themify.me/themify-icons
   title : "CONCEPTUAL PEACE ART"
-  content0 : "I'm a conceptual peace artist / engineer formally trained in electrical engineering. My art fuses concepts from mathematics, physics, science, engineering, and applies them by analogy in an educational manner to make better sense of our Human experience. I try to make this aesthetic and functional in order to liberate useful technical constructs to empower non-technical people to improve their lives in fun ways. I'm a fierce advocate for universal peace."
+  content0 : "I'm a conceptual peace artist / engineer formally trained in electrical engineering. My art fuses concepts from mathematics, physics, science, engineering, and applies them by analogy in an educational manner to make better sense of our Human experience. I try to make this aesthetic and functional in order to liberate useful technical constructs to empower non-technical people to improve their lives in fun ways. I'm a fierce advocate for erecting a computational global peace system."
   content1 : "Let's invent a time machine for peace."
   content2 : "blairmunroakusa, LLC is licensed in the State of Alaska to conduct ANY LAWFUL business under primary NAICS code 711510: Independent Artists, Writers, and Performers."
   content3 : "THIS ENTERPRISE WAS FOUNDED TO INVENT A TIME MACHINE FOR PEACE."
-  content4 : "( or the world's largest supercomputer ~ The Universal Peace Computer )"
+  content4 : "( or the world's largest supercomputer ~ the universal piece computer )"
   button:
     enable : false
     label1 : "Explore!"
