make astudyinpeace html accessible and render properly

--- a/data/en/feature.yml
+++ b/data/en/feature.yml
@@ -4,7 +4,7 @@ feature:
   image : images/about/portraitcollage2.jpg
   image_webp : images/about/portraitcollage2.webp
   title : "Hi! I'm Blair."
-  content000 : "**PERRSONAL OVERVIEW**"
+  content000 : "**PERSONAL OVERVIEW**"
   content00 : "All I want to do is make new and better life with people."
   content01 : "I think that the best way to do this is by coming up with ways to include everybody. I think that to make new life, we should collaborate and do art. I think that to make life better, we should do art in a way that helps us solve our hardest problems together."
   content02 : "In terms of solving our hardest problems, my studies in physics led me to conclude that our hard problems all revolve around the way we think about time---both the language we use and the ideas we hold on to. Time is (okay fine, _effectively_) irreversible according to thermodynamics, and the second law of thermodynamics tells us (it tells me at least) that no matter how much energy we put into solving a hard problem, new and more problems always crop up in its place. So it really isn't about solving all the problems; it is more about finding the best way to go about solving new problems, as they crop up in real-time. It is more about asking 'Is peace a result, or is it more like a process?' Process first."
